2011-02-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-13
        * Allow for new treatment of Et overflow.

2011-01-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-12
        * Updates for MissingEtSig.

2010-12-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-11
        * Updates to TrigT1CaloLWHistogramTool.
        * Remove obsolete MonHelper.

2010-12-02  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-10
        * Take full account of LimitedRoISet bit.

2010-11-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-09
        * PPrMon: Bugfix.

2010-11-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-08
        * PPrMon: Fix minor bugs in procHistograms.

2010-11-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-07
        * PPrMon: Fine time plots.

2010-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-06
        * Correction to profile fill arguments.

2010-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-05
        * Check for uninitialised variables.

2010-08-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-04
        * Revise JEM hardware error histograms.

2010-08-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-03
        * Fix checkreq warnings.

2010-07-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-02
        * Fix merge method for event number histograms.

2010-07-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-01
        * Fix compiler warning in PPrSpareMon.cxx.

2010-07-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>